--- a/new.html
+++ b/new.html
@@ -29,6 +29,23 @@ HTML5
 <aside>
 <p>This is aside part of the web page</p>
 </aside>
+  
+  <form action="http://example.com/cgiscript.pl" method="post">
+<p>
+<label for="firstname">first name: </label>
+<input type="text" id="firstname"><br />
+<label for="lastname">last name: </label>
+5. HTML5 − Web Forms 2.0
+HTML5
+22
+<input type="text" id="lastname"><br />
+<label for="email">email: </label>
+<input type="text" id="email"><br>
+<input type="radio" name="sex" value="male"> Male<br>
+<input type="radio" name="sex" value="female"> Female<br>
+<input type="submit" value="send"> <input type="reset">
+</p>
+</form>
 <footer>
 <p>Created by <a href="http://tutorialspoint.com/">Tutorials
 Point</a></p>
