--- a/new.html
+++ b/new.html
@@ -46,6 +46,11 @@ HTML5
 <input type="submit" value="send"> <input type="reset">
 </p>
 </form>
+  
+  <form action = "/cgi-bin/html5.cgi" method = "get">
+Date and Time : <input type = "datetime" name = "newinput" />
+<input type = "submit" value = "submit" />
+</form> 
 <footer>
 <p>Created by <a href="http://tutorialspoint.com/">Tutorials
 Point</a></p>
