--- a/new.html
+++ b/new.html
@@ -8,6 +8,13 @@
 <header role="banner">
 <h1>HTML5 Document Structure Example</h1>
 <p>This page should be tried in safari, chrome or Mozila.</p>
+  <script type="text/javascript">
+function showResult()
+{
+x = document.forms["myform"]["newinput"].value;
+document.forms["myform"]["result"].value=x;
+}
+</script>
 </header>
 <nav>
 <ul>
@@ -29,7 +36,11 @@ HTML5
 <aside>
 <p>This is aside part of the web page</p>
 </aside>
-  
+  <form action="/cgi-bin/html5.cgi" method="get" name="myform">
+Enter a value : <input type="text" name="newinput" />
+<input type="button" value="Result" onclick="showResult();" />
+<output name="result"/>
+</form>
   <form action="http://example.com/cgiscript.pl" method="post">
 <p>
 <label for="firstname">first name: </label>
