--- a/new.html
+++ b/new.html
@@ -62,6 +62,11 @@ HTML5
 Date and Time : <input type = "datetime" name = "newinput" />
 <input type = "submit" value = "submit" />
 </form> 
+  
+  <h2>HTML5 SVG Circle</h2>
+<svg id="svgelem" height="200" xmlns="http://www.w3.org/2000/svg">
+<circle id="redcircle" cx="50" cy="50" r="50" fill="red" />
+</svg>
 <footer>
 <p>Created by <a href="http://tutorialspoint.com/">Tutorials
 Point</a></p>
